--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -89,7 +85,7 @@
 							<version>${lombok.version}</version>
 						</path>
 						<path>
-							<groupId>org.lombok</groupId>
+							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok-mapstruct-binding</artifactId>
 							<version>0.2.0</version>
 						</path>
