Adding sec config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,9 @@
 logging.level.guru.springframework=debug
 spring.flyway.enabled=false
 
-spring.security.user.name=user1
-spring.security.user.password=password
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090
 
-logging.level.org.springframework.security=trace
+#logging.level.org.springframework.security=trace
 
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
